js/js.translator/testData/incremental/invalidation/typeScriptExportsPerFile/lib1/l1.7.kt
@JsExport
fun foo() = 0

@JsExport
class ExportedClass(val value: Int) {
    fun getValue() = value
}
